--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,8 +1,10 @@
 $tablet-width: 768px;
-$desktop-width: 1024px;
+$desktop-width: 1200px;
+$desktop-width-max: 1440px;
 
 :root {
   --white: #ffffff;
+  --white-0: rgba(155, 155, 155, 0);
   --black: #000000;
   --black-25: rgba(0, 0, 0, 0.25);
   --grey: #181818;
@@ -12,4 +14,5 @@ $desktop-width: 1024px;
 $font-inter: "Inter", "Arial", sans-serif;
 $font-sfuiIdisplay: "SFUIDisplay", "Arial", ans-serif;
 
-$gradient: linear-gradient(0deg, var(--black-25), var(--black-25));
+$gradient-black: linear-gradient(0deg, var(--black-25), var(--black-25));
+$gradient-white: linear-gradient(124.94deg, var(--black-25) -120.88%, var(--white-0) 127.52%);
