--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,19 +6,33 @@ $desktop-width-max: 1440px;
   --white: #ffffff;
   --white-0: rgba(155, 155, 155, 0);
   --white-30: rgba(255, 255, 255, 0.3);
+  --white-50: rgba(255, 255, 255, 0.5);
   --black: #000000;
+  --black-options: #141414;
+  --black-0: rgba(20, 20, 20, 0);
   --black-25: rgba(0, 0, 0, 0.25);
   --special-black: #060416;
   --grey: #181818;
   --yellow: #ff970a;
+  --yellow-10: #ff9a10;
+  --yellow-19: #ff9519;
+  --yelow-41: rgba(255, 151, 10, 0.41);
   --red: #ff0000;
   --special-grey: #a3a3a3;
+  --grey-text: #a9a9a9;
+  --grey-table: #c0c0c0;
 }
 
 $font-inter: "Inter", "Arial", sans-serif;
 $font-sfuiIdisplay: "SFUIDisplay", "Arial", sans-serif;
+$font-gothampro: "GothamPro", "Arial", sans-serif;
 
 $gradient-black: linear-gradient(0deg, var(--black-25), var(--black-25));
+$gradient-options: linear-gradient(180deg, var(--black-options) 0%, var(--black-0) 100%);
 $gradient-white: linear-gradient(124.94deg, var(--black-25) -120.88%, var(--white-0) 127.52%);
+$gradient-button: linear-gradient(52.76deg, var(--yellow-10) 18.82%, var(--yellow-19) 77.36%);
 
 $border-30: 1px solid var(--white-30);
+$border-yellow: 1.5px solid var(--yellow);
+
+$shadow: 0 2.4px 12px var(--yelow-41);
