--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -1,8 +1,17 @@
 .options {
+  background-color: var(--black);
+}
+
+.options__wrapper {
+  max-width: 1185px;
+  margin: 0 auto;
   padding: 50px 0;
   display: grid;
-  grid-template-columns: 18px 1fr 1fr 17px;
-  background-color: var(--black);
+  grid-template-columns: 18px 1fr 17px;
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .options__title {
@@ -13,6 +22,10 @@
   font-family: $font-sfuiIdisplay;
   color: var(--white);
   grid-column: 2 / -2;
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / -1;
+  }
 }
 
 .options__nav {
@@ -24,6 +37,10 @@
 
   @media (min-width: $tablet-width) {
     display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / -1;
   }
 }
 
@@ -38,12 +55,16 @@
   font-family: $font-sfuiIdisplay;
   color: var(--white-50);
   grid-column: 2 / -2;
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / -1;
+  }
 }
 
 .options__nav-item {
   width: 50%;
   height: 65px;
-  margin-bottom: -20px;
+  margin-bottom: -35px;
   text-decoration: none;
   border-radius: 20px 20px 0 0;
   overflow: hidden;
@@ -58,19 +79,45 @@
   }
 }
 
-.options__cart {
-  display: none;
-  border-radius: 20px;
+.options__cart-wrapper {
+  padding-left: 0;
+  list-style: none;
   grid-column: 2 / -2;
 
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / -1;
+  }
+}
+
+.options__cart {
+  padding: 25px 10px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  text-decoration: none;
+  border-radius: 20px;
+
   &--active {
-    padding: 25px 10px;
-    display: block;
+    display: flex;
     background: var(--grey);
   }
 
   @media (min-width: $tablet-width) {
-    display: block;
+    width: 48%;
+    padding: 32px 47px 37px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: var(--grey);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 573px;
   }
 }
 
@@ -91,7 +138,7 @@
   width: 100%;
   height: 38px;
   margin: 0;
-  padding: 10px 22px 0 19px;
+  padding: 6px 22px 0 19px;
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -102,25 +149,50 @@
   &::after {
     content: "";
     width: 11px;
-    height: 12px;
+    height: 11px;
     display: block;
+    margin-top: 6px;
     background: url("../img/stack.svg#arrow") 50% 50% no-repeat;
     background-size: cover;
 
     &.active {
       transform: rotate(180deg);
     }
+
+    @media (min-width: $desktop-width) {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 545px;
+    height: 52px;
+    margin-left: -30px;
+    padding: 0 15px 0 0;
+    border: none;
   }
 }
 
 .options__menu-item {
-  display: block;
+  display: none;
+
+  &--active {
+    display: block;
+
+    @media (min-width: $desktop-width) {
+      padding: 0 16px;
+      border-radius: 41px;
+      border: $border-yellow;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
 }
 
 .options__menu-link {
-  display: none;
-  justify-content: start;
-  align-items: center;
+  margin: auto 0;
   text-decoration: none;
   font-weight: normal;
   font-size: 13px;
@@ -128,8 +200,11 @@
   font-family: $font-sfuiIdisplay;
   color: var(--yellow);
 
-  &--active {
+  @media (min-width: $desktop-width) {
+    height: 52px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
@@ -152,14 +227,33 @@
 }
 
 .options__info {
+  margin-bottom: 19px;
   padding: 26px 11px 24px 11px;
   background: var(--black);
   border-radius: 11px;
+
+  @media (min-width: $desktop-width) {
+    padding: 16px 21px 18px;
+  }
 }
 
 .options__info-table {
   width: 100%;
   border-collapse: collapse;
+
+  &--min {
+    @media (min-width: $desktop-width) {
+      display: none;
+    }
+  }
+
+  &--max {
+    display: none;
+
+    @media (min-width: $desktop-width) {
+      display: block;
+    }
+  }
 
   th {
     padding: 10px 0;
@@ -170,16 +264,38 @@
     line-height: 122.2%;
     font-family: $font-gothampro;
     color: var(--grey-table);
+
+    @media (min-width: $desktop-width) {
+      padding: 0 0 10px;
+      text-align: left;
+      font-size: 14px;
+      border-bottom: none;
+    }
   }
 
-  .options__info-rate {
-    padding-top: 20px;
-    text-align: center;
-    font-weight: 900;
-    font-size: 27.3171px;
-    line-height: 122.2%;
-    font-family: $font-sfuiIdisplay;
-    color: var(--white);
+  td {
+    @media (min-width: $desktop-width) {
+      text-align: left;
+    }
+  }
+}
+
+
+.options__info-rate {
+  padding-top: 20px;
+  text-align: center;
+  font-weight: 900;
+  font-size: 27.3171px;
+  line-height: 122.2%;
+  font-family: $font-sfuiIdisplay;
+  color: var(--white);
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+
+    &--max {
+      padding-left: 10px;
+    }
   }
 }
 
@@ -190,6 +306,12 @@
   line-height: 122.2%;
   font-family: $font-sfuiIdisplay;
   color: var(--white);
+
+  @media (min-width: $desktop-width) {
+    &--max {
+      padding: 0 19px 19px 10px;
+    }
+  }
 }
 
 .options__info-range {
@@ -199,18 +321,18 @@
   line-height: 122.2%;
   font-family: $font-sfuiIdisplay;
   color: var(--white);
+
+  @media (min-width: $desktop-width) {
+    font-weight: bold;
+  }
 }
 
 .options__info-range-wrapper {
   display: flex;
   justify-content: center;
 
-  p {
-    margin: 0;
-  }
-
-  span {
-    display: none;
+  @media (min-width: $desktop-width) {
+    padding-left: 10px;
   }
 }
 
@@ -220,6 +342,11 @@
   padding: 7px 15px;
   border-radius: 11px;
   background: var(--grey);
+
+  @media (min-width: $desktop-width) {
+    margin-top: 18px;
+    padding: 16px 16px;
+  }
 }
 
 .options__info-text {
@@ -228,7 +355,11 @@
   font-size: 13px;
   line-height: 122.2%;
   font-family: $font-sfuiIdisplay;
-  color: var(--white);
+  color: var(--grey-table);
+
+  @media (min-width: $desktop-width) {
+    font-size: 15px;
+  }
 }
 
 .options__wrapper-button {
@@ -236,9 +367,8 @@
 }
 
 .options__button {
-  width: 100%;
+  max-width: 230px;
   height: 42px;
-  margin-top: 19px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -253,4 +383,9 @@
   font-family: $font-sfuiIdisplay;
   letter-spacing: 0.045em;
   color: var(--black);
+
+  @media (min-width: $desktop-width) {
+    height: 53px;
+    font-size: 15px;
+  }
 }
