--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -25,6 +25,8 @@
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / -1;
+    font-size: 60px;
+    line-height: 99.5%;
   }
 }
 
@@ -85,6 +87,7 @@
   grid-column: 2 / -2;
 
   @media (min-width: $tablet-width) {
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
   }
@@ -130,6 +133,7 @@
   color: var(--white);
 
   @media (min-width: $tablet-width) {
+    margin-left: 16px;
     display: flex;
   }
 }
@@ -168,7 +172,7 @@
     width: 545px;
     height: 52px;
     margin-left: -30px;
-    padding: 0 15px 0 0;
+    padding: 0 15px;
     border: none;
   }
 }
@@ -180,7 +184,9 @@
     display: block;
 
     @media (min-width: $desktop-width) {
-      padding: 0 16px;
+      padding: 0 15px;
+      margin-left: -15px;
+      margin-right: -15px;
       border-radius: 41px;
       border: $border-yellow;
     }
@@ -233,6 +239,7 @@
   border-radius: 11px;
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 38px;
     padding: 16px 21px 18px;
   }
 }
@@ -364,6 +371,10 @@
 
 .options__wrapper-button {
   margin: 0 45px;
+
+  @media (min-width: $desktop-width) {
+    margin-left: 0;
+  }
 }
 
 .options__button {
@@ -387,5 +398,19 @@
   @media (min-width: $desktop-width) {
     height: 53px;
     font-size: 15px;
+  }
+}
+
+.options__svg-button {
+  width: 12px;
+  height: 19px;
+  margin-left: 8px;
+  transform: rotate(-90deg);
+  fill: var(--black);
+
+  @media (min-width: $desktop-width) {
+    width: 17px;
+    height: 28px;
+    margin-left: 10px;
   }
 }
