--- a/source/sass/blocks/calculator.scss
+++ b/source/sass/blocks/calculator.scss
@@ -3,6 +3,14 @@
   display: grid;
   grid-template-columns: 17px 1fr 17px;
   background: var(--grey);
+
+  @media (min-width: $tablet-width) {
+    padding: 60px 0 48px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1185px 1fr;
+  }
 }
 
 .calculator__title {
@@ -13,11 +21,36 @@
   font-family: $font-sfuiIdisplay;
   color: var(--white);
   grid-column: 2 / -2;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    font-size: 60px;
+    line-height: 99.5%;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
 }
 
 .calculator__form {
   padding-top: 28px;
   grid-column: 2 / -2;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    max-width: 1185px;
+    margin: 0 auto;
+    padding-top: 60px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.calculator__form-wrapper {
+  @media (min-width: $tablet-width) {
+    width: 48%;
+  }
 }
 
 .calculator__fieldset {
@@ -25,8 +58,19 @@
   padding: 0;
   border: none;
 
+  &--slider {
+    @media (min-width: $tablet-width) {
+      max-width: 496px;
+    }
+  }
+
   &--term {
     margin-top: 35px;
+
+    @media (min-width: $tablet-width) {
+      max-width: 340px;
+      margin-top: 30px;
+    }
   }
 
   &--pay {
@@ -34,6 +78,15 @@
     padding: 26px 25px 31px;
     background: var(--black);
     border-radius: 18px;
+
+    @media (min-width: $tablet-width) {
+      max-width: 540px;
+      margin-top: 4px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 49px 80px 47px;
+    }
   }
 }
 
@@ -44,13 +97,23 @@
   line-height: 122.2%;
   font-family: $font-sfuiIdisplay;
   color: var(--grey-table);
+
+  @media (min-width: $tablet-width) {
+    font-size: 15px;
+    line-height: 122.2%;
+  }
 }
 
 .calculator__wrapper-input-slider {
   margin-top: 8px;
-  padding: 17px 11px 20px;
+  padding: 12px 11px 15px;
   border: $border-30-2;
   border-radius: 7px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 10px;
+    padding: 18px 14px 20px;
+  }
 }
 
 .calculator__input {
@@ -62,6 +125,10 @@
     line-height: 95%;
     font-family: $font-sfuiIdisplay;
     color: var(--white);
+
+    @media (min-width: $tablet-width) {
+      font-size: 23.3684px;
+    }
   }
 
   &--term:checked {
@@ -69,6 +136,10 @@
       background: var(--white);
       border-radius: 21px;
       color: var(--black);
+
+      @media (min-width: $tablet-width) {
+        border-radius: 27.2632px;
+      }
     }
   }
 
@@ -82,6 +153,10 @@
     line-height: 99.5%;
     font-family: $font-sfuiIdisplay;
     color: var(--white);
+
+    @media (min-width: $tablet-width) {
+      font-size: 50px;
+    }
   }
 
   &--pay {
@@ -94,6 +169,10 @@
     line-height: 99.5%;
     font-family: $font-sfuiIdisplay;
     color: var(--white);
+
+    @media (min-width: $tablet-width) {
+      font-size: 43px;
+    }
   }
 }
 
@@ -103,6 +182,11 @@
   line-height: 95%;
   font-family: $font-sfuiIdisplay;
   color: var(--grey-radio);
+
+  @media (min-width: $tablet-width) {
+    font-size: 15px;
+    line-height: 122.2%;
+  }
 
   &--term {
     height: 100%;
@@ -147,6 +231,10 @@
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 12px;
+  }
 }
 
 .calculator__sum {
@@ -156,6 +244,11 @@
   line-height: 122.2%;
   font-family: $font-sfuiIdisplay;
   color: var(--grey-table);
+
+  @media (min-width: $tablet-width) {
+    font-size: 15px;
+    line-height: 122.2%;
+  }
 }
 
 .calculator__list-term {
@@ -163,9 +256,15 @@
   margin: 12px 0 0;
   padding: 0;
   display: flex;
-  background: #000000;
+  background: var(--black);
   border-radius: 21px;
   overflow: hidden;
+
+  @media (min-width: $tablet-width) {
+    height: 49px;
+    margin-top: 16px;
+    border-radius: 27.2632px;
+  }
 }
 
 .calculator__item-term {
@@ -187,6 +286,10 @@
   &--top {
     padding-bottom: 21px;
     border-bottom: $border-30;
+
+    @media (min-width: $tablet-width) {
+      padding-bottom: 35px;
+    }
   }
 
   &--bottom {
@@ -200,6 +303,11 @@
   margin-top: 47px;
   display: flex;
   flex-direction: column;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .calculator__button-submit {
@@ -217,10 +325,17 @@
   background: $gradient-button;
   box-shadow: $shadow;
   border-radius: 32.8px;
+
+  @media (min-width: $desktop-width) {
+    width: 166px;
+    height: 49px;
+    margin: 0;
+    font-size: 15px;
+  }
 }
 
 .calculator__button-link {
-  width: 195px;
+  width: 166px;
   height: 42px;
   margin: 18px auto 0;
   padding: 0 22px;
@@ -238,4 +353,8 @@
   letter-spacing: 0.07em;
   text-transform: uppercase;
   color: var(--grey-color);
+
+  @media (min-width: $desktop-width) {
+    margin: 7px 0 0;
+  }
 }
