Добавил стили для investor

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,6 +18,7 @@ $desktop-width-max: 1440px;
   --yellow-19: #ff9519;
   --yellow-41: rgba(255, 151, 10, 0.41);
   --yellow-svg: #ff9619;
+  --yellow-content: #ff9618;
   --red: #ff0000;
   --special-grey: #a3a3a3;
   --grey-text: #a9a9a9;
