--- a/source/sass/blocks/calculator.scss
+++ b/source/sass/blocks/calculator.scss
@@ -82,6 +82,7 @@
     @media (min-width: $tablet-width) {
       max-width: 540px;
       margin-top: 4px;
+      margin-left: auto;
     }
 
     @media (min-width: $desktop-width) {
