--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@import "../../node_modules/swiper/swiper.scss";
 @import "fonts.scss";
 @import "variables.scss";
 @import "global.scss";
@@ -7,3 +8,5 @@
 @import "blocks/options.scss";
 @import "blocks/calculator.scss";
 @import "blocks/investor.scss";
+@import "blocks/reviews.scss";
+@import "blocks/guaranty.scss";
