--- a/source/sass/blocks/guaranty.scss
+++ b/source/sass/blocks/guaranty.scss
@@ -81,6 +81,7 @@
   height: 42px;
   margin: 0 auto;
   padding: 0 42px;
+  border: none;
   display: flex;
   align-items: center;
   text-align: center;
@@ -102,5 +103,10 @@
     font-size: 15px;
     grid-column: 2 / -1;
     grid-row: 2 / -1;
+  }
+
+  &:hover,
+  &:focus {
+    background: var(--yellow-hover);
   }
 }
