--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,8 @@ $desktop-width-max: 1440px;
   --black-options: #141414;
   --black-0: rgba(20, 20, 20, 0);
   --black-25: rgba(0, 0, 0, 0.25);
+  --black-60: rgba(0, 0, 0, 0.6);
+  --black-75: rgba(0, 0, 0, 0.975);
   --special-black: #060416;
   --grey: #181818;
   --yellow: #ff970a;
@@ -34,10 +36,10 @@ $desktop-width-max: 1440px;
 }
 
 $font-inter: "Inter", "Arial", sans-serif;
-$font-sfuiIdisplay: "SFUIDisplay", "Arial", sans-serif;
+$font-sfuiIdisplay: "SFUIDisplay", "Arial", ans-serif;
 $font-gothampro: "GothamPro", "Arial", sans-serif;
 
-$gradient-black: linear-gradient(0deg, var(--black-25), var(--black-25));
+$gradient-black: linear-gradient(0deg, var(--black), var(--black-25));
 $gradient-options: linear-gradient(180deg, var(--black-options) 0%, var(--black-0) 100%);
 $gradient-white: linear-gradient(124.94deg, var(--black-25) -120.88%, var(--white-0) 127.52%);
 $gradient-button: linear-gradient(52.76deg, var(--yellow-10) 18.82%, var(--yellow-19) 77.36%);
