--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -72,6 +72,10 @@
   border-radius: 20px 20px 0 0;
   overflow: hidden;
 
+  &.active {
+    background: var(--grey);
+  }
+
   &.active .options__nav-button {
     background: var(--grey);
     color: var(--white);
@@ -205,8 +209,8 @@
     @media (min-width: $desktop-width) {
       height: 52px;
       padding: 0 15px;
-      margin-left: -15px;
-      margin-right: -15px;
+      margin-left: -16.5px;
+      margin-right: -16.5px;
       border-radius: 41px;
       border: $border-yellow;
     }
@@ -417,8 +421,10 @@
 }
 
 .options__button {
+  min-width: 195px;
   max-width: 230px;
   height: 42px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
