--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -161,6 +161,10 @@
   line-height: 99.5%;
   font-family: $font-sfuiIdisplay;
   color: var(--white);
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+  }
 }
 
 .reviews__control {
