Добавил отправку формы калькулятора

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,6 @@
 @import "blocks/reviews.scss";
 @import "blocks/guaranty.scss";
 @import "blocks/footer.scss";
+@import "blocks/success-calculator.scss";
 @import "blocks/success.scss";
 @import "blocks/error-loading";
-
