--- a/source/sass/blocks/calculator.scss
+++ b/source/sass/blocks/calculator.scss
@@ -191,7 +191,7 @@
 
 .calculator__input {
   &--slider {
-    width: 85px;
+    width: 100%;
     border: none;
     background: var(--grey);
     font-weight: 500;
@@ -201,7 +201,6 @@
     color: var(--white);
 
     @media (min-width: $tablet-width) {
-      width: 105px;
       font-size: 23.3684px;
     }
   }
@@ -219,7 +218,7 @@
   }
 
   &--pay-top {
-    width: 140px;
+    width: 100%;
     margin-top: 8px;
     background: var(--black);
     border: none;
@@ -230,13 +229,12 @@
     color: var(--white);
 
     @media (min-width: $tablet-width) {
-      width: 170px;
       font-size: 50px;
     }
   }
 
   &--pay {
-    width: 40px;
+    width: 75px;
     margin-top: 7px;
     background: var(--black);
     border: none;
@@ -247,13 +245,13 @@
     color: var(--white);
 
     @media (min-width: $tablet-width) {
-      width: 55px;
+      width: 120px;
       font-size: 43px;
     }
   }
 
   &--pay-right {
-    width: 125px;
+    width: 155px;
     margin-top: 7px;
     background: var(--black);
     border: none;
@@ -264,7 +262,7 @@
     color: var(--white);
 
     @media (min-width: $tablet-width) {
-      width: 175px;
+      width: 230px;
       font-size: 43px;
     }
   }
